fixed alignment issues on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,7 @@
   }
 
   .home-text{
-    width: 100vw;
+    width: 70vw;
   }
   .projects{
     padding-top: 0rem;
